# ki-browser-standalone

./: .gitignore  .synapseignore  Cargo.toml  Dockerfile  Dockerfile.cef  README.md  build.rs  config.example.toml  config.toml  docker-compose.yml  docker-entrypoint-cef.sh  docker-entrypoint.sh
browser-extension/: README.md  background.js  browser-polyfill.js  grab.js  manifest.json  options.html  options.js  popup.html  popup.js
crates/ki-browser-client/: Cargo.toml
crates/ki-browser-client/src/: app.rs  connection.rs  decoder.rs  main.rs  protocol.rs
docs/plans/: 2026-02-15-stealth-fixes-design.md
scripts/: download_cef.ps1  download_cef.sh
sdks/python/: ki_browser.py
sdks/typescript/: ki-browser.ts
shares/knowledge/: agent-modell-vergleich.md
shares/knowledge/rules/: api-fehler.md
src/: error.rs  lib.rs  main.rs
src/api/: agent_registry.rs  agent_routes.rs  auth_middleware.rs  batch.rs  batch_routes.rs  browser_handler.rs  cdp_client.rs  cdp_frames.rs  cdp_mapping.rs  extraction_routes.rs  guard_middleware.rs  gui_routes.rs  identity.rs  ipc.rs  mod.rs  ocr_routes.rs  openapi.rs  routes.rs  server.rs  session.rs  vision_routes.rs  websocket.rs
src/api/batch/: mod.rs  request.rs  response.rs  scripts.rs  types.rs  wait.rs
src/api/batch_routes/: batch_handlers.rs  helpers.rs  mod.rs  session_handlers.rs  types.rs
src/api/debug_routes/: captcha.rs  consent.rs  console.rs  cookies.rs  css_inspector.rs  mod.rs  network.rs  performance.rs  popups.rs  types.rs
src/api/routes/: dom.rs  input.rs  misc.rs  mod.rs  navigation.rs  screenshot.rs  session.rs  tabs.rs  types.rs
src/api/session/: manager.rs  mod.rs  scripts.rs  types.rs
src/api/session_store/: crypto.rs  mod.rs  restore.rs  types.rs
src/api/viewer_stream/: encoder.rs  handler.rs  mod.rs  protocol.rs
src/browser/: annotate.rs  cef_engine.rs  cef_headless.rs  cef_input.rs  cef_render.rs  chromium_engine.rs  content_extractor.rs  dom.rs  dom_snapshot.rs  engine.rs  forms.rs  mod.rs  screenshot.rs  structured_data.rs  tab.rs  tab_lock.rs  vision.rs
src/browser/cef_engine/: callbacks.rs  engine.rs  event_sender.rs  input.rs  message_loop.rs  mod.rs  navigation.rs  tab.rs  tests.rs
src/browser/cef_input/: events.rs  keyboard.rs  keyboard_handler.rs  mod.rs  mouse.rs
src/browser/content_extractor/: extractor.rs  mod.rs  types.rs
src/browser/forms/: detect.rs  fill.rs  handler.rs  mod.rs  types.rs  validate.rs
src/config/: mod.rs  settings.rs
src/gui/: browser_app.rs  context_menu.rs  devtools.rs  element_inspector.rs  gui_app_utils.rs  gui_context_actions.rs  gui_devtools_actions.rs  gui_devtools_handler.rs  gui_inspect.rs  gui_tab_management.rs  gui_vision.rs  handle.rs  mod.rs  status_bar.rs  tab_bar.rs  title_bar.rs  toolbar.rs  viewport.rs  vision_overlay.rs
src/gui/devtools/: mod.rs  render_ocr.rs  render_page_info.rs  render_source.rs  render_tabs.rs  render_vision.rs  state.rs  types.rs  window.rs
src/gui/element_inspector/: mod.rs  renderer.rs  types.rs
src/gui/gui_vision/: frame_buffer.rs  image_tactics.rs  js_execution.rs  mod.rs  text_tactics.rs
src/gui/tab_bar/: mod.rs  painting.rs  renderer.rs  types.rs
src/gui/viewport/: key_mapping.rs  mod.rs  renderer.rs  types.rs
src/gui/vision_overlay/: mod.rs  ocr_enrichment.rs  parsers.rs  renderer.rs  types.rs
src/input/: bezier.rs  keyboard.rs  mod.rs  mouse.rs  timing.rs
src/ocr/: mod.rs  paddleocr.rs  surya.rs  tesseract.rs
src/stealth/: audio.rs  canvas.rs  fingerprint.rs  mod.rs  navigator.rs  webgl.rs  webrtc.rs
src/stealth/fingerprint/: builder.rs  fingerprint.rs  generator.rs  mod.rs  types.rs
src/stealth/navigator/: builder.rs  helpers.rs  mod.rs  script.rs  types.rs
src/stealth/webgl/: builder.rs  config.rs  mod.rs  profiles.rs  scripts.rs
static/: viewer.html
tests/: api_tests.rs  browser_tests.rs  input_tests.rs  stealth_tests.rs
tools/browser-smoke/: README.md  smoke.sh
tools/e2e-viewer-test/: Cargo.toml
tools/e2e-viewer-test/src/: main.rs
