[package]
name = "ki-browser-standalone"
version = "0.1.0"
edition = "2021"
description = "High-performance browser automation with built-in stealth capabilities"
authors = ["KI-Browser Team"]
license = "MIT"

[[bin]]
name = "ki-browser"
path = "src/main.rs"

[lib]
name = "ki_browser_standalone"
path = "src/lib.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Configuration file parsing
toml = "0.8"
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }

# CORS and HTTP middleware support
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
rand = "0.8"
image = "0.25"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

# WebSocket
tokio-tungstenite = "0.21"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Async traits
async-trait = "0.1"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Synchronization
parking_lot = "0.12"

# Lazy statics
once_cell = "1"

# Async utilities
futures = "0.3"

# Error handling
thiserror = "1"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"
gtk = "0.18"

[build-dependencies]
cc = "1"

[features]
default = ["mock-browser"]
cef-browser = ["dep:cef"]
mock-browser = []

[dependencies.cef]
version = "143"
optional = true
