[package]
name = "ki-browser-standalone"
version = "0.1.0"
edition = "2021"
description = "High-performance browser automation with built-in stealth capabilities"
authors = ["KI-Browser Team"]
license = "MIT"

[[bin]]
name = "ki-browser"
path = "src/main.rs"

[lib]
name = "ki_browser_standalone"
path = "src/lib.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Configuration file parsing
toml = "0.8"
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }

# CORS and HTTP middleware support
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
rand = "0.8"
image = "0.24"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

# WebSocket
tokio-tungstenite = "0.21"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Async traits
async-trait = "0.1"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Synchronization
parking_lot = "0.12"

# Lazy statics
once_cell = "1"

# Async utilities
futures = "0.3"

# Error handling
thiserror = "1"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }

# Linux dependencies - only needed for CEF
# [target.'cfg(target_os = "linux")'.dependencies]
# x11 = "2.21"
# gtk = "0.18"

[build-dependencies]
cc = "1"

[features]
default = ["mock-browser"]
chromium-browser = ["dep:chromiumoxide"]
cef-browser = ["dep:cef"]
mock-browser = []

[dependencies.chromiumoxide]
version = "0.7"
optional = true
default-features = false
features = ["tokio-runtime"]

[dependencies.cef]
# Use older version 140 which may have more compatible dependencies
version = "140"
optional = true
default-features = false
# Only enable sandbox and linux-x11, skip build-util which requires Rust 1.88+
features = ["sandbox", "linux-x11"]

# Pin home crate to version compatible with Rust 1.84
[dependencies.home]
version = "=0.5.11"

# Pin wit-bindgen for Rust 1.84 compatibility
[dependencies.wit-bindgen]
version = "=0.49.0"

# Patch transitive dependencies for Rust 1.84 compatibility
[patch.crates-io]
# wasip2 1.0.2 requires Rust 1.87, use 1.0.1 which requires Rust 1.82
wasip2 = { git = "https://github.com/bytecodealliance/wasi-rs", tag = "wasip2-1.0.1" }
