[workspace]
members = ["crates/ki-browser-client"]

[package]
name = "ki-browser-standalone"
version = "0.1.0"
edition = "2021"
description = "High-performance browser automation with built-in stealth capabilities"
authors = ["KI-Browser Team"]
license = "MIT"

[[bin]]
name = "ki-browser"
path = "src/main.rs"

[lib]
name = "ki_browser_standalone"
path = "src/lib.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Configuration file parsing
toml = "0.8"
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }

# CORS and HTTP middleware support
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
rand = "0.8"
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

# WebSocket
tokio-tungstenite = "0.21"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Async traits
async-trait = "0.1"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Synchronization
parking_lot = "0.12"

# Lazy statics
once_cell = "1"

# Async utilities
futures = "0.3"

# Error handling
thiserror = "1"

# OpenAPI documentation
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }

# Temporary files (used by OCR Python subprocess engines)
tempfile = "3"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }

# Linux dependencies - only needed for CEF
# [target.'cfg(target_os = "linux")'.dependencies]
# x11 = "2.21"
# gtk = "0.18"

[build-dependencies]
cc = "1"

[features]
default = ["cef-browser"]
cef-browser = ["dep:cef"]
gui = ["cef-browser", "dep:eframe", "dep:egui"]
ocr = ["dep:leptess"]
mock-browser = []
webp = []

[dependencies.cef]
version = "144"
optional = true
default-features = false
# Enable sandbox and linux-x11 for full Linux support
features = ["sandbox", "linux-x11"]

[dependencies.eframe]
version = "0.31"
optional = true
default-features = false
features = ["default_fonts", "wgpu", "wayland", "x11"]

[dependencies.egui]
version = "0.31"
optional = true

# OCR — Tesseract C bindings via leptess (optional, behind 'ocr' feature)
[dependencies.leptess]
version = "0.14"
optional = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

# Pin home crate to version compatible with Rust 1.84
[dependencies.home]
version = "=0.5.11"

# Pin wit-bindgen for Rust 1.84 compatibility
[dependencies.wit-bindgen]
version = "=0.49.0"

# Patch transitive dependencies for Rust 1.84 compatibility
[patch.crates-io]
# wasip2 1.0.2 requires Rust 1.87, use 1.0.1 which requires Rust 1.82
wasip2 = { git = "https://github.com/bytecodealliance/wasi-rs", tag = "wasip2-1.0.1" }
