[package]
name = "ki-browser-client"
version = "0.1.0"
edition = "2021"
description = "Lightweight viewer client for ki-browser — connects via WebSocket to stream browser viewport"

[[bin]]
name = "ki-browser-client"
path = "src/main.rs"

[dependencies]
# GUI
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
egui = "0.31"

# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket
tokio-tungstenite = "0.21"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image decoding (JPEG)
image = "0.24"

# UUID for tab IDs
uuid = { version = "1", features = ["v4", "serde"] }

# CLI args
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Synchronization
parking_lot = "0.12"

# H.264 hardware decoding via FFmpeg (optional)
ffmpeg-next = { version = "8", optional = true }

[features]
default = []
h264 = ["dep:ffmpeg-next"]
