[workspace]

[package]
name = "e2e-viewer-test"
version = "0.1.0"
edition = "2021"
description = "E2E test CLI tool for the WebSocket viewer stream endpoint"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
